public/css/weather.css
:root {
    --primary-color: #4e406a;
    --primary-color-light: #9687b7;
    --primary-color-light-2: #8d7db0;
    --accent-color: #f57c00;
    background-color: #efefef;
}

.sidenav {
    width: 100px;
}

.nav-wrapper {
    min-width: 400px;
}

.nav-wrapper, header, main, footer {
    padding-left: 100px;
}

@media only screen and (max-width : 992px) {
    .nav-wrapper, header, main, footer {
        padding-left: 0;
    }
}

.pagination {
    background-color: #dfdfdf;
    padding: 5px 0 !important;
}

.pagination li {
    margin: 0;
}

.hourly,
.week {
    min-width: 400px;
}

.today.card-image {
    max-width: 200px;
}

.weekly img {
    width: 30px;
    height: 30px;
}

ul.collapsible {
    box-shadow: none;
    border: none;
}

ul li {
    margin-bottom: 5px;
}

ul li .collapsible-header {
    border: 2px solid #ddd;
    border-radius: 50px;
    padding: .5rem;
}

ul li.hourly-more .collapsible-header {
    border-style: dashed;
}

ul li.active .collapsible-header {
    border: 2px solid var(--primary-color);
}

.primary-color {
    background-color: var(--primary-color);
}

.primary-color-text {
    color: var(--primary-color);
}

.accent-color-text {
    color: var(--accent-color);
}

.weather-container {
    background-color: #fff;
    margin: 0 auto;
}

.weather-details {
    color: #2f2f2f;
    font-size: 1.2rem;
}

.temp-primary {
    font-size: 1.2rem;
    font-weight: bold;
}

.row.no-margin,
.no-margin {
    margin: 0;
}

.today img {
    width: 150px;
}

#map {
    height: 200px;
    width: 100%;
}

.chart-container {
    height: 420px;
}

/* Hide input arrows */
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
/* Firefox */
input[type=number] {
    -moz-appearance: textfield;
}

/* input[type=number]:not(.browser-default):focus:not([readonly]),
input[type=number]:not(.browser-default) {
    border-bottom: none;
    box-shadow: none;
    margin-bottom: 0;
}

.input-field {
    border: 2px solid var(--primary-color);
    border-radius: 50px;
} */

.top-row {
    margin: 10px;
    margin-left: 110px;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.zip-submit-wrapper {
    margin-left: 10px;
    margin-bottom: 10px;
}

@media screen and (max-width: 993px) {
    .top-row {
        margin-left: 10px;
    }
    .zip-submit-wrapper {
        margin: 0 auto;
    }
}

.card {
    border-radius: 5px;
}

.flex-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.flex-item {
    flex: 1 1 auto;
    align-items: center;
    width: 45%;
    margin: 10px;
}

.flex-item .card,
.flex-item .card-panel {
    height: 100%;
    min-height: 220px;
    margin: 0;
}

.flex-item .card.today-card,
.flex-item .card.map-card {
    height: auto;
}

.flex-item .card.today-card .card-content,
.flex-item .card.map-card .card-content {
    padding: 10px;
}

.chart-switch-desc.active {
    font-weight: bold;
}

.switch label input[type=checkbox] + .lever:after {
    background-color: var(--primary-color);
}

.switch label input[type=checkbox] + .lever {
    background-color: var(--primary-color-light-2);
}

.sidenav li > a i {
    transition: all .2s;
    text-align: center;
}

.sidenav li > a:hover i {
    color: #fff;
}

.sidenav .user-view {
    padding-left: 25px;
    padding-top: 0;
}

.preloader {
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
    background-color: rgba(255, 255, 255, 0.75);
}

.btn {
    background-color: var(--primary-color);
}

a.wahay {
    color: #fff;
}

a.wahay:hover {
    color: var(--accent-color);
}

.sidenav-logout {
    position: absolute; bottom: 40px;
}

.sidenav-trigger {
    align-self: flex-start;
    background-color: var(--primary-color);
    color: #fff;
    border-radius: 50px;
    padding: 10px;
    padding-bottom: 5px;
    margin-right: 5px;
    transition: all .2s;
}

.sidenav-trigger:hover {
    background-color: var(--accent-color);
}

@media screen and (max-width: 993px) {
    h2 {
        font-size: 3rem;
    }

    .flex-item {
        width: 50%;
    }
}

@media screen and (max-width: 601px) {
    .flex-item {
        width: 100%;
    }
}

